# Overlay-Agent-Claude

./: .gitignore  Cargo.toml  Package.swift  README.md  package-lock.json  package.json
Sources/DesktopCompanion/: AppDelegate.swift  CompanionPanel.swift  CompanionState.swift
crates/companion-state/: Cargo.toml
crates/companion-state/examples/: replay.rs
crates/companion-state/src/: lib.rs  watcher.rs
docs/: claude-code-transcript.md
src/: index.html  main.js  main.test.mjs  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/chat/: chat.css  chat.js  index.html
tools/: e2e-status-check.sh  soak-test.sh
tools/transcript-watcher/: derive-state.mjs
