[package]
name = "desktop-companion"
version = "0.1.0"
description = "Always-on-top desktop companion reflecting live Claude Code status"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
companion-state = { path = "../crates/companion-state" }
